unpackaged/main/default/objects/pse__Change_Request_Settings__c/pse__Change_Request_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Preferences impacting the change request process.</description>
    <label>Change Request Settings</label>
</CustomObject>