unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Budget_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Name_Suffix__c</fullName>
    <defaultValue>"-Change Request Budget"</defaultValue>
    <description>Suffix for a budget that has been created due to a change request.</description>
    <inlineHelpText>Suffix for a budget that has been created due to a change request.</inlineHelpText>
    <label>Budget Name Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>