unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Create_Change_Request_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Create_Change_Request_Field_Set__c</fullName>
    <description>The API name of the Opportunity field set that defines the additional fields added to the Create Change request window.</description>
    <inlineHelpText>The API name of the Opportunity field set that defines the additional fields added to the Create Change request window.</inlineHelpText>
    <label>Create Change Request Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>