unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Default_Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Budget_Status__c</fullName>
    <defaultValue>"Draft"</defaultValue>
    <description>The default status of a budget that has been created due to a change request.</description>
    <inlineHelpText>The default status of a budget that has been created due to a change request.</inlineHelpText>
    <label>Default Budget Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>