unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Default_Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Budget_Type__c</fullName>
    <defaultValue>"Customer Purchase Order Change Request"</defaultValue>
    <description>The default type for a budget that has been created due to a change request.</description>
    <inlineHelpText>The default type for a budget that has been created due to a change request.</inlineHelpText>
    <label>Default Budget Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>