unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Include_Budget__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Budget__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, budget form is visible if you have CRUD permission on budget.</description>
    <inlineHelpText>When true, budget form is visible if you have CRUD permission on budget.</inlineHelpText>
    <label>Include Budget</label>
    <type>Checkbox</type>
</CustomField>