unpackaged/main/default/objects/pse__Change_Request_Settings__c/fields/pse__Opportunity_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity_Name_Suffix__c</fullName>
    <defaultValue>"-Change Request"</defaultValue>
    <description>Suffix for an opportunity that has been created due to a change request.</description>
    <inlineHelpText>Suffix for an opportunity that has been created due to a change request.</inlineHelpText>
    <label>Opportunity Name Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>